// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = ".;helloworld";
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc MakeOrder (OrderRequest) returns (OrderConfirmation) {}
  rpc TrackingOrder (TrackingRequest) returns (Status) {}
  rpc TrackingStatusUpdate (StatusResponse) returns (msgGenerico) {}
  rpc TrackingStatusFinal (StatusResponse) returns (HelloReply) {}
  rpc SendInformation (DeliveryRequest) returns (Information) {}
  rpc DeliverOrder (Information) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string clientName = 2;
}

message OrderRequest {
  string orderID = 1;
  string productName = 2;
  string productValue = 3;
  string src = 4;
  string dest = 5;
  string priority = 6;
  string productType = 7;
}

message TrackingRequest {
  string trackingCode = 1;
}

message StatusRequest {
  string trackingCode = 1;
}

message DeliveryRequest{
  string r = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message OrderConfirmation {
  string message = 1;
}

message Status {
  string message = 1;
}

message msgGenerico {
  string message = 1;
}

message StatusResponse{
  string trackingCode = 1;
  string status = 2;
}

message Information {
  string orderID = 1;
  string productType = 2;
  string productValue = 3;
  string src = 4;
  string dest = 5;
  string attempts = 6;
  string date = 7;
}